[package]
name = "re-enable-port-forwarding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8.0"
rpassword = "7.2.0"
serde = { version = "1.0.171", features = ["derive"] }
thirtyfour = "0.31.0"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["fs", "time"] }
